--- a/userstyle.css
+++ b/userstyle.css
@@ -2,11 +2,13 @@
 :root {
     /* Colors */
     --blue-1: #99c1f1;
+    --teal-1: #94d9cb;
     --green-1: #8ff0a4;
     --yellow-1: #f9f06b;
     --orange-1: #ffbe6f;
     --red-1: #f66151;
     --purple-1: #dc8add;
+    --lavender-1: #a18ee0;
 
     --light-1: #ffffff;
     --light-2: #f6f5f4;
@@ -55,8 +57,8 @@
 
     --btn-separator-color: hsl(240, 2.5%, 31.37%);
 
-    --btn-bg-color-light: hsl(240, 2.9%, 27.06%);
-    --btn-bg-color-light-hover: hsl(240, 2.9%, 24.06%);
+    --btn-bg-color-light: hsl(240, 2.9%, 24.06%);
+    --btn-bg-color-light-hover: hsl(240, 2.9%, 27.06%);
     --btn-bg-color-light-selected-hover: hsl(240, 2.9%, 30.06%);
 
     /* Notes */
@@ -82,11 +84,7 @@
     font-size: var(--font-size) !important;
   }
   
-  p, ul, ol, li {
-    color: var(--light-3) !important;
-  }
-  
-  strong {
+  p, ul, ol, li, em, strong {
     color: var(--light-3) !important;
   }
   
@@ -98,21 +96,20 @@
   
   /* Scrollbar */
   ::-webkit-scrollbar {
+    background-color: var(--window-bg-color) !important;
     width: 10px !important;
   }
 
   ::-webkit-scrollbar:hover {
     background-color: var(--sidebar-bg-color) !important;
   }
-
+  
   ::-webkit-scrollbar-thumb {
-    background-color: var(--btn-bg-color-light-hover) !important;
-    border-radius: var(--scroll-radius) !important;
-    border: 4px solid var(--window-bg-color) !important;
+    background: var(--btn-bg-color) !important;
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background-color: var(--btn-bg-color-light-selected-hover) !important;
+    background-color: var(--btn-bg-color-hover) !important;
     border: none !important;
   }
   
@@ -236,6 +233,7 @@
 
   /* Set code block background, border radius, font style and spacing */
   .code-perfect-container pre.hljs {
+    background-color: var(--view-bg-color) !important;
     border-radius: var(--border-radius) !important;
     padding: 0 0 0 32px !important;
   }
@@ -248,7 +246,54 @@
   }
 
   .code-perfect-container pre.hljs code {
+    margin: 0 0 0 8px !important;
     padding: .5em .5em .17em !important;
+  }
+
+  .code-perfect-container pre.hljs ul.hljs-line-num {
+    border-radius: 0 !important;
+  }
+
+  /* Apply colors to elements in code block */
+  .code-perfect-container pre.hljs span {
+    color: var(--light-5) !important;
+  }
+
+  .code-perfect-container pre.hljs code.hljs .hljs-keyword,
+  .code-perfect-container pre.hljs code.hljs .hljs-literal {
+    color: var(--lavender-1) !important;
+  }
+
+  .code-perfect-container pre.hljs code.hljs .hljs-built_in,
+  .code-perfect-container pre.hljs code.hljs .hljs-title.function_ {
+    color: var(--orange-1) !important;
+  }
+
+  .code-perfect-container pre.hljs code.hljs .hljs-operator {
+    color: var(--red-1) !important;
+  }
+
+  .code-perfect-container pre.hljs code.hljs .hljs-string,
+  .code-perfect-container pre.hljs code.hljs .hljs-number{
+    color: var(--green-1) !important;
+  }
+
+  .code-perfect-container pre.hljs code.hljs .hljs-type,
+  .code-perfect-container pre.hljs code.hljs .hljs-title.class_ {
+    color: var(--blue-1) !important;
+  }
+
+  .code-perfect-container pre.hljs code.hljs .hljs-variable,
+  .code-perfect-container pre.hljs code.hljs .hljs-params {
+    color: var(--light-4) !important;
+  }
+
+  .code-perfect-container pre.hljs code.hljs .hljs-meta {
+    color: var(--teal-1) !important;
+  }
+
+  .code-perfect-container pre.hljs code.hljs .hljs-comment {
+    color: var(--dark-1) !important;
   }
 
   /* Adjust line number position and set color */ 
@@ -258,7 +303,7 @@
   }
 
   .code-perfect-container pre.hljs ul.hljs-line-num li {
-    color: var(--dark-3) !important;
+    color: var(--dark-2) !important;
   }
 
   /* Github Alerts (https://discourse.joplinapp.org/t/plugin-github-alerts/42902) */
